@@ -1,4 +1,7 @@
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* server-src/amcheck.c: main(): replace strappend() usage with GString
+
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
 	* recover-src/uscan.l: replace strappend() usage with a GString
 
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
